# advection

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  ruff.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  quickstart.rst  requirements.txt  usage.rst
docs/guides/: energy_balance_closure.rst
docs/reference/: advect_detect.rst  advection.rst  closure.rst
src/advection/: __init__.py  _constants.py  advect_detect.py  advection.py  closure.py
tests/: __init__.py  conftest.py  test_advection.py  test_golden_characterization.py  test_physics_validation.py
