[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advection"
version = "0.2.0"
description = "Functions used to calculate advective fluxes in eddy covariance data and make corrections"
readme = "README.rst"
authors = [
  {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
maintainers = [
  {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"

]
license = {text = "MIT license"}
dependencies = ["numpy"

]

[project.optional-dependencies]
dev = ["pandas",
    "coverage",  # testing
    "black",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "flake8",  # linting
    "mypy",  # type checking
    "sphinx",  # documentation
    "sphinx-autodoc-typehints",  # documentation
    "sphinx-rtd-theme",  # documentation
    "myst-parser",  # documentation
]

[project.urls]

bugs = "https://github.com/inkenbrandt/advection/issues"
changelog = "https://github.com/inkenbrandt/advection/blob/master/changelog.md"
homepage = "https://github.com/inkenbrandt/advection"
documentation = "https://advection.readthedocs.io"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# The codebase is currently untyped (docstrings carry the units/contract, not
# annotations). mypy is run leniently so it passes today and grows teeth as
# type hints are added; it is NOT configured to flag missing annotations.
python_version = "3.10"
files = ["src/advection"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true





